fixed alignment of items in history

--- a/public/inventoryStyle.css
+++ b/public/inventoryStyle.css
@@ -323,9 +323,9 @@ a{
   flex-wrap:wrap;
   border-radius: 10px;
   border-width: 2px;
-  position: relative;
-  width: 300px;
-  height: 165px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
   background: radial-gradient(97.57% 210.75% at 0.9% 2.98%, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
   backdrop-filter: blur(3.2px); /* Adjust the blur for the glass effect */
   justify-content: center;
@@ -921,8 +921,28 @@ tr{
   border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
 
-.labelsTable tr {
+.labelsTable {
+  position: absolute;
+  height: 100%;
   width: 100%;
+  border-collapse: collapse;
+}
+.labelsTable tr {
+  display: flex; /* Make tr a block-level element */
+  width: 100%; /* Occupy full width of its container */
+}
+.labelsTable a {
+  display: flex;
+  width: 100%;
+}
+
+.labelsTable th, .labelsTable td, .labelsTable a {
+  flex: 1; /* Make all th elements have equal flex */
+  text-align: center; /* Center text in each header cell */
+}
+.labelsTable a > td {
+  flex: 1; /* Make all th elements have equal flex */
+  text-align: center;
 }
 
 .floorBox p a {
